# opt_dpcond

./: .gitignore  README.md  exportoptprob.m  getoptprob.m  opt_example.m  optpath.m  optpcd_setup.m  optprecond.m
data/: diag-bench-100-1.000e-01-opt.mat  diag-bench-500-1.000e-01-opt.mat
doc/: left_precond_res.tex  right_precond_res.tex  two_sided_precond_res.tex
doc/figs/: YearPredictionMSD.fig  YearPredictionMSD.t.fig  credit.fig  mnist.fig
hdsdp/: optprecond
logs/: log-left.tex  log-lr.tex  log-right.tex  log_libsvm.tex  log_libsvm.txt  log_random.tex  log_random.txt  log_suitesparse.tex  log_suitesparse.txt  process_log.ipynb  sslog-L.txt  sslog-LR-1.txt  sslog-LR-2.txt  sslog-R.txt
logs/combined/: libsvm.txt  sslog-L-normalized.txt  suitesparse-renewed.txt  suitesparse.txt
revised/: left_precond_libsvm.csv  left_precond_res.csv  log_cg_iter.txt  plot_diag_pdf.m  right_precond_res.csv  two_sided_precond_res.csv
test/: test_precond_libsvm.m  test_precond_random.m  test_precond_suitesparse.m  test_tmp.m  testoptprecond.m  testrandsample.m
utils/: d1d2SDP.m  genillmat.m  getcvxdiag.m  getitertwosidedprecond.m  getlibsvm.m  getoptcombprecond.m  getptbdata.m  getrandom.m  getraw.m  getsedumi.m  getslvtime.m  getsuitesparse.m  gettwosidedprecond.m  iskappafeas.m  ruizscale.m  test_time.sh
utils/rci/: CMakeLists.txt  rci_cg.c
